added linear regression

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -182,14 +182,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                                \r"
+            "[Stage 927:>                (0 + 1) / 1][Stage 928:>                (0 + 1) / 1]\r"
           ]
         },
         {
@@ -207,6 +207,13 @@
             "+--------+--------------------+--------------------+---------------------+--------------------+----------------+--------+-------------+-------------------+----------------------+---------------------------+\n",
             "only showing top 5 rows\n",
             "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
           ]
         }
       ],
@@ -260,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
@@ -311,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -346,7 +353,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 916:>                                                        (0 + 1) / 1]\r"
+            "[Stage 1025:>                                                       (0 + 1) / 1]\r"
           ]
         },
         {
@@ -371,6 +378,155 @@
         "print((regression_data.count(), len(regression_data.columns)))\n",
         "print((regression_train.count(), len(regression_train.columns)))\n",
         "print((regression_test.count(), len(regression_test.columns)))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 4. Linear Regression"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "from pyspark.ml.regression import GeneralizedLinearRegression\n",
+        "\n",
+        "feature_names = assembler.getInputCols()\n",
+        "\n",
+        "glr = GeneralizedLinearRegression(\n",
+        "    featuresCol=\"features\",\n",
+        "    labelCol=\"SALARY\",\n",
+        "    family=\"gaussian\",\n",
+        "    link=\"identity\",  \n",
+        "    maxIter=10,\n",
+        "    regParam=0.3\n",
+        ")\n",
+        "\n",
+        "glr_model = glr.fit(regression_train)\n",
+        "summary = glr_model.summary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Coefficients and Intercept"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 63,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Intercept: 85652.7724\n",
+            "Coefficients:\n",
+            "Feature 1: 1611.6790\n",
+            "Feature 2: 1611.6790\n",
+            "Feature 3: 28.5445\n",
+            "Feature 4: 1121.2885\n",
+            "Feature 5: 18.3956\n",
+            "Feature 6: 1247.2920\n",
+            "Feature 7: 4395.2939\n",
+            "Feature 8: 9613.9354\n",
+            "Feature 9: -25786.3100\n",
+            "Feature 10: 14121.9131\n",
+            "Feature 11: -10802.3370\n",
+            "Feature 12: -1697.8713\n",
+            "Feature 13: 9148.5643\n",
+            "Feature 14: -12465.7922\n",
+            "Feature 15: 1354.9289\n",
+            "Feature 16: -16520.4017\n",
+            "Feature 17: 33093.9737\n",
+            "Feature 18: -9792.1286\n",
+            "Feature 19: -5104.6947\n",
+            "Feature 20: 3404.4200\n",
+            "Feature 21: 5003.3703\n",
+            "Feature 22: -27508.5112\n",
+            "Feature 23: 2140.9090\n",
+            "Feature 24: 6459.6838\n",
+            "Feature 25: -6724.0612\n",
+            "Feature 26: 3701.7083\n",
+            "Feature 27: 7847.9024\n",
+            "Feature 28: 2132.7804\n",
+            "Feature 29: -1121.2880\n",
+            "Feature 30: -18.3956\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Coefficients and Intercept\n",
+        "print(\"Intercept: {:.4f}\".format(glr_model.intercept))\n",
+        "print(\"Coefficients:\")\n",
+        "for i, coef in enumerate(glr_model.coefficients):\n",
+        "    print(f\"Feature {i + 1}: {coef:.4f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Regression Summary"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 64,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "--- Regression Summary ---\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 1049:>                                                       (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Coefficient Standard Errors: ['25284.0846', '25284.0846', '23.0776', '997287.1423', '178878.9931', '20925.2354', '20941.6279', '20945.0333', '21085.0222', '21087.7503', '21103.9802', '21115.3979', '21275.7023', '21353.2901', '21581.0996', '21655.1516', '21756.4357', '22072.8849', '22089.2698', '22646.1041', '22407.8241', '25731.0670', '25725.8832', '3160.6398', '3736.1231', '3336.2900', '3407.5906', '3790.8019', '997287.1423', '178878.9931', '1013428.7606']\n",
+            "T-Values: ['0.0637', '0.0637', '1.2369', '0.0011', '0.0001', '0.0596', '0.2099', '0.4590', '-1.2230', '0.6697', '-0.5119', '-0.0804', '0.4300', '-0.5838', '0.0628', '-0.7629', '1.5211', '-0.4436', '-0.2311', '0.1503', '0.2233', '-1.0691', '0.0832', '2.0438', '-1.7997', '1.1095', '2.3031', '0.5626', '-0.0011', '-0.0001', '0.0845']\n",
+            "P-Values: ['0.9492', '0.9492', '0.2162', '0.9991', '0.9999', '0.9525', '0.8338', '0.6463', '0.2214', '0.5031', '0.6088', '0.9359', '0.6672', '0.5594', '0.9499', '0.4456', '0.1283', '0.6573', '0.8173', '0.8805', '0.8233', '0.2851', '0.9337', '0.0410', '0.0720', '0.2673', '0.0213', '0.5737', '0.9991', '0.9999', '0.9326']\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "# Summary stats\n",
+        "print(\"\\n--- Regression Summary ---\")\n",
+        "print(\"Coefficient Standard Errors:\", [f\"{val:.4f}\" for val in summary.coefficientStandardErrors])\n",
+        "print(\"T-Values:\", [f\"{val:.4f}\" for val in summary.tValues])\n",
+        "print(\"P-Values:\", [f\"{val:.4f}\" for val in summary.pValues])"
       ]
     }
   ],
