updated the code

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -22,6 +22,12 @@
         "    theme: cerulean\n",
         "    toc: true\n",
         "    toc-depth: 2\n",
+        "  pdf: \n",
+        "    embed-resources: true\n",
+        "    toc-depth: 2\n",
+        "    geometry: \n",
+        "      - landscape\n",
+        "      - margin=0.5in\n",
         "engine: jupyter\n",
         "jupyter: assignment-04-kernel\n",
         "execute:\n",
@@ -37,7 +43,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        " # 1. Load the Dataset"
+        " # Load the Dataset"
       ]
     },
     {
@@ -133,7 +139,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 2. Feature Engineering"
+        "# Feature Engineering"
       ]
     },
     {
@@ -313,7 +319,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 3. Train/Test Split"
+        "# Train/Test Split"
       ]
     },
     {
@@ -384,7 +390,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 4. Linear Regression"
+        "# Linear Regression"
       ]
     },
     {
