added dispersion summary

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -534,6 +534,66 @@
         "print(\"T-Values:\", [f\"{val:.4f}\" for val in summary.tValues])\n",
         "print(\"P-Values:\", [f\"{val:.4f}\" for val in summary.pValues])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Dispersion Summary"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Null Deviance: 2321265663379.3027\n",
+            "Residual DF Null: 4069\n",
+            "Deviance: 1808610663869.2112\n",
+            "Residual DF: 4039\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 1067:>                                                       (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AIC: 92656.7396\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "# print(f\"\\nDispersion: {summary.dispersion:.4f}\")\n",
+        "print(f\"Null Deviance: {summary.nullDeviance:.4f}\")\n",
+        "print(f\"Residual DF Null: {summary.residualDegreeOfFreedomNull}\")\n",
+        "print(f\"Deviance: {summary.deviance:.4f}\")\n",
+        "print(f\"Residual DF: {summary.residualDegreeOfFreedom}\")\n",
+        "print(f\"AIC: {summary.aic:.4f}\")"
+      ]
     }
   ],
   "metadata": {
