--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -987,8 +987,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Split Data"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1042,13 +1049,100 @@
         }
       ],
       "source": [
-        "# Split Data\n",
         "\n",
         "polyreg_train, polyreg_test = poly_data.randomSplit([0.8, 0.2], seed=42)\n",
         "\n",
         "print((poly_data.count(), len(poly_data.columns)))\n",
         "print((polyreg_train.count(), len(polyreg_train.columns)))\n",
         "print((polyreg_test.count(), len(polyreg_test.columns)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "from pyspark.ml.regression import GeneralizedLinearRegression\n",
+        "\n",
+        "feature_names = assembler.getInputCols()\n",
+        "\n",
+        "poly_glr_max_years = GeneralizedLinearRegression(\n",
+        "    featuresCol=\"features_poly\",\n",
+        "    labelCol=\"SALARY\",\n",
+        "    family=\"gaussian\",   \n",
+        "    link=\"identity\",     \n",
+        "    maxIter=10,         \n",
+        "    regParam=0.3         \n",
+        ")\n",
+        "\n",
+        "poly_glr_max_years_model = poly_glr_max_years.fit(poly_data)\n",
+        "poly_summary = poly_glr_max_years_model.summary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Coefficients and Intercept"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Intercept: 87729.4985\n",
+            "Coefficients:\n",
+            "Feature 1: 3073.9396\n",
+            "Feature 2: -292.0763\n",
+            "Feature 3: 3073.9396\n",
+            "Feature 4: 29.5828\n",
+            "Feature 5: -2253.9775\n",
+            "Feature 6: 805.2130\n",
+            "Feature 7: 5881.4501\n",
+            "Feature 8: -30439.8972\n",
+            "Feature 9: 8412.8920\n",
+            "Feature 10: -13680.3546\n",
+            "Feature 11: -4660.4367\n",
+            "Feature 12: 7967.9560\n",
+            "Feature 13: -14214.1229\n",
+            "Feature 14: -2857.2642\n",
+            "Feature 15: -15252.4114\n",
+            "Feature 16: 38851.8773\n",
+            "Feature 17: -12908.6915\n",
+            "Feature 18: -9159.5725\n",
+            "Feature 19: 13889.7107\n",
+            "Feature 20: 4123.7347\n",
+            "Feature 21: -40022.9996\n",
+            "Feature 22: 27224.9060\n",
+            "Feature 23: 5759.7671\n",
+            "Feature 24: -6588.6707\n",
+            "Feature 25: 3972.6485\n",
+            "Feature 26: 8353.6157\n",
+            "Feature 27: 2403.5211\n",
+            "Feature 28: -4220.3464\n",
+            "Feature 29: 214.4410\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Intercept: {:.4f}\".format(poly_glr_max_years_model.intercept))\n",
+        "print(\"Coefficients:\")\n",
+        "for i, coef in enumerate(poly_glr_max_years_model.coefficients):\n",
+        "    print(f\"Feature {i + 1}: {coef:.4f}\")"
       ]
     }
   ],
