added dispersion summary

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -1196,6 +1196,66 @@
         "print(\"T-Values:\", [f\"{val:.4f}\" for val in poly_summary.tValues])\n",
         "print(\"P-Values:\", [f\"{val:.4f}\" for val in poly_summary.pValues])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Dispersion Summary"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Null Deviance: 2909123659016.3213\n",
+            "Residual DF Null: 5038\n",
+            "Deviance: 2244317022136.5864\n",
+            "Residual DF: 5009\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Stage 210:>                                                        (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AIC: 114711.0237\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "# print(f\"\\nDispersion: {summary.dispersion:.4f}\")\n",
+        "print(f\"Null Deviance: {poly_summary.nullDeviance:.4f}\")\n",
+        "print(f\"Residual DF Null: {poly_summary.residualDegreeOfFreedomNull}\")\n",
+        "print(f\"Deviance: {poly_summary.deviance:.4f}\")\n",
+        "print(f\"Residual DF: {poly_summary.residualDegreeOfFreedom}\")\n",
+        "print(f\"AIC: {poly_summary.aic:.4f}\")"
+      ]
     }
   ],
   "metadata": {
