--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -1256,6 +1256,50 @@
         "print(f\"Residual DF: {poly_summary.residualDegreeOfFreedom}\")\n",
         "print(f\"AIC: {poly_summary.aic:.4f}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Diagnostics"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "--- This is a diagnostic check, no need to print in the final doc ---\n",
+            "Length of features: 30\n",
+            "Length of coefs: 30\n",
+            "Length of se: 30\n",
+            "Length of tvals: 30\n",
+            "Length of pvals: 30\n"
+          ]
+        }
+      ],
+      "source": [
+        "feature_names = poly_summary._call_java(\"featureNames\")\n",
+        "\n",
+        "\n",
+        "poly_features = [\"Intercept\"] + list(feature_names)\n",
+        "poly_coefs    = [poly_glr_max_years_model.intercept] + list(poly_glr_max_years_model.coefficients)\n",
+        "poly_se       = list(poly_summary.coefficientStandardErrors)\n",
+        "poly_tvals    = list(poly_summary.tValues)\n",
+        "poly_pvals    = list(poly_summary.pValues)\n",
+        "\n",
+        "\n",
+        "print(\"--- This is a diagnostic check, no need to print in the final doc ---\")\n",
+        "print(\"Length of features:\", len(poly_features))\n",
+        "print(\"Length of coefs:\", len(poly_coefs))\n",
+        "print(\"Length of se:\", len(poly_se))\n",
+        "print(\"Length of tvals:\", len(poly_tvals))\n",
+        "print(\"Length of pvals:\", len(poly_pvals))"
+      ]
     }
   ],
   "metadata": {
