--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -1300,6 +1300,38 @@
         "print(\"Length of tvals:\", len(poly_tvals))\n",
         "print(\"Length of pvals:\", len(poly_pvals))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Tabulate"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "from tabulate import tabulate\n",
+        "from IPython.display import HTML\n",
+        "\n",
+        "poly_coef_table = pd.DataFrame({\n",
+        "    \"Feature\": poly_features,\n",
+        "    \"Estimate\": [f\"{v:.4f}\" if v is not None else None for v in poly_coefs],\n",
+        "    \"Std Error\": [f\"{v:.4f}\" if v is not None else None for v in poly_se],\n",
+        "    \"t-stat\": [f\"{v:.4f}\" if v is not None else None for v in poly_tvals],\n",
+        "    \"P-Value\": [f\"{v:.4f}\" if v is not None else None for v in poly_pvals]\n",
+        "})\n",
+        "\n",
+        "\n",
+        "poly_coef_table.to_csv(\"output/poly_summary.csv\", index=False)\n",
+        "\n",
+        "\n",
+        "HTML(poly_coef_table.to_html())"
+      ]
     }
   ],
   "metadata": {
