--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -1310,9 +1310,276 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Feature</th>\n",
+              "      <th>Estimate</th>\n",
+              "      <th>Std Error</th>\n",
+              "      <th>t-stat</th>\n",
+              "      <th>P-Value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Intercept</td>\n",
+              "      <td>87729.4985</td>\n",
+              "      <td>22747.6805</td>\n",
+              "      <td>0.1351</td>\n",
+              "      <td>0.8925</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>MIN_YEARS_EXPERIENCE</td>\n",
+              "      <td>3073.9396</td>\n",
+              "      <td>36.5365</td>\n",
+              "      <td>-7.9941</td>\n",
+              "      <td>0.0000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>MAX_YEARS_EXPERIENCE_SQ</td>\n",
+              "      <td>-292.0763</td>\n",
+              "      <td>22747.6805</td>\n",
+              "      <td>0.1351</td>\n",
+              "      <td>0.8925</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>MAX_YEARS_EXPERIENCE</td>\n",
+              "      <td>3073.9396</td>\n",
+              "      <td>20.5955</td>\n",
+              "      <td>1.4364</td>\n",
+              "      <td>0.1510</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>DURATION</td>\n",
+              "      <td>29.5828</td>\n",
+              "      <td>20846.6950</td>\n",
+              "      <td>-0.1081</td>\n",
+              "      <td>0.9139</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Bachelor's degree\"</td>\n",
+              "      <td>-2253.9775</td>\n",
+              "      <td>20859.1237</td>\n",
+              "      <td>0.0386</td>\n",
+              "      <td>0.9692</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"No Education Listed\"</td>\n",
+              "      <td>805.2130</td>\n",
+              "      <td>20863.3147</td>\n",
+              "      <td>0.2819</td>\n",
+              "      <td>0.7780</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Bachelor's degree\",  \"Master's degree\"</td>\n",
+              "      <td>5881.4501</td>\n",
+              "      <td>20971.9940</td>\n",
+              "      <td>-1.4515</td>\n",
+              "      <td>0.1467</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"High school or GED\",  \"Bachelor's degree\"</td>\n",
+              "      <td>-30439.8972</td>\n",
+              "      <td>20987.9155</td>\n",
+              "      <td>0.4008</td>\n",
+              "      <td>0.6886</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Bachelor's degree\",  \"Master's degree\",  \"Ph.D. or professional degree\"</td>\n",
+              "      <td>8412.8920</td>\n",
+              "      <td>20990.0817</td>\n",
+              "      <td>-0.6518</td>\n",
+              "      <td>0.5146</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"High school or GED\"</td>\n",
+              "      <td>-13680.3546</td>\n",
+              "      <td>21019.8840</td>\n",
+              "      <td>-0.2217</td>\n",
+              "      <td>0.8245</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Associate degree\",  \"Bachelor's degree\"</td>\n",
+              "      <td>-4660.4367</td>\n",
+              "      <td>21100.5976</td>\n",
+              "      <td>0.3776</td>\n",
+              "      <td>0.7057</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Master's degree\"</td>\n",
+              "      <td>7967.9560</td>\n",
+              "      <td>21203.5634</td>\n",
+              "      <td>-0.6704</td>\n",
+              "      <td>0.5027</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Associate degree\"</td>\n",
+              "      <td>-14214.1229</td>\n",
+              "      <td>21380.9216</td>\n",
+              "      <td>-0.1336</td>\n",
+              "      <td>0.8937</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\"</td>\n",
+              "      <td>-2857.2642</td>\n",
+              "      <td>21419.1586</td>\n",
+              "      <td>-0.7121</td>\n",
+              "      <td>0.4764</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\",  \"Ph.D. or professional degree\"</td>\n",
+              "      <td>-15252.4114</td>\n",
+              "      <td>21567.5225</td>\n",
+              "      <td>1.8014</td>\n",
+              "      <td>0.0717</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Bachelor's degree\",  \"Ph.D. or professional degree\"</td>\n",
+              "      <td>38851.8773</td>\n",
+              "      <td>21793.5925</td>\n",
+              "      <td>-0.5923</td>\n",
+              "      <td>0.5537</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"High school or GED\",  \"Associate degree\",  \"Bachelor's degree\"</td>\n",
+              "      <td>-12908.6915</td>\n",
+              "      <td>21905.9591</td>\n",
+              "      <td>-0.4181</td>\n",
+              "      <td>0.6759</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"High school or GED\",  \"Bachelor's degree\",  \"Master's degree\"</td>\n",
+              "      <td>-9159.5725</td>\n",
+              "      <td>22009.1299</td>\n",
+              "      <td>0.6311</td>\n",
+              "      <td>0.5280</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Master's degree\",  \"Ph.D. or professional degree\"</td>\n",
+              "      <td>13889.7107</td>\n",
+              "      <td>22150.2630</td>\n",
+              "      <td>0.1862</td>\n",
+              "      <td>0.8523</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"High school or GED\",  \"Associate degree\"</td>\n",
+              "      <td>4123.7347</td>\n",
+              "      <td>24166.2009</td>\n",
+              "      <td>-1.6562</td>\n",
+              "      <td>0.0978</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"High school or GED\",  \"Associate degree\",  \"Bachelor's degree\",  \"Master's degree\"</td>\n",
+              "      <td>-40022.9996</td>\n",
+              "      <td>24163.3570</td>\n",
+              "      <td>1.1267</td>\n",
+              "      <td>0.2599</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>EDUCATION_LEVELS_NAME_vec_\"Ph.D. or professional degree\"</td>\n",
+              "      <td>27224.9060</td>\n",
+              "      <td>3057.6640</td>\n",
+              "      <td>1.8837</td>\n",
+              "      <td>0.0597</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>23</th>\n",
+              "      <td>EMPLOYMENT_TYPE_NAME_vec_Fulltime</td>\n",
+              "      <td>5759.7671</td>\n",
+              "      <td>3566.5832</td>\n",
+              "      <td>-1.8473</td>\n",
+              "      <td>0.0648</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24</th>\n",
+              "      <td>EMPLOYMENT_TYPE_NAME_vec_Parttime</td>\n",
+              "      <td>-6588.6707</td>\n",
+              "      <td>2907.7548</td>\n",
+              "      <td>1.3662</td>\n",
+              "      <td>0.1719</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25</th>\n",
+              "      <td>REMOTE_TYPE_NAME_vec_Undefined</td>\n",
+              "      <td>3972.6485</td>\n",
+              "      <td>2969.5007</td>\n",
+              "      <td>2.8131</td>\n",
+              "      <td>0.0049</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26</th>\n",
+              "      <td>REMOTE_TYPE_NAME_vec_Remote</td>\n",
+              "      <td>8353.6157</td>\n",
+              "      <td>3355.2443</td>\n",
+              "      <td>0.7163</td>\n",
+              "      <td>0.4738</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>27</th>\n",
+              "      <td>REMOTE_TYPE_NAME_vec_Hybrid</td>\n",
+              "      <td>2403.5211</td>\n",
+              "      <td>4582.4088</td>\n",
+              "      <td>-0.9210</td>\n",
+              "      <td>0.3571</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>28</th>\n",
+              "      <td>IS_INTERNSHIP_vec_0</td>\n",
+              "      <td>-4220.3464</td>\n",
+              "      <td>821.4479</td>\n",
+              "      <td>0.2611</td>\n",
+              "      <td>0.7941</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>29</th>\n",
+              "      <td>COMPANY_IS_STAFFING_vec_0</td>\n",
+              "      <td>214.4410</td>\n",
+              "      <td>21780.4771</td>\n",
+              "      <td>4.0279</td>\n",
+              "      <td>0.0001</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "from tabulate import tabulate\n",
