--- a/AI Prompt.qmd
+++ b/AI Prompt.qmd
@@ -152,3 +152,99 @@ rmse = evaluator.evaluate(predictions)
 # Feature importance
 print(model.featureImportances)
 ```
+
+::: {.callout}
+Explain how to extract the feature importance from the Random Forest model
+:::
+
+* Overview
+Feature importance measures how much each feature contributes to the model's predictions. Random Forest calculates this based on how much each feature reduces impurity (variance for regression, Gini/entropy for classification) across all trees.
+
+* How Feature Importance is Calculated
+Mean Decrease in Impurity (MDI)
+For each feature:
+Look at all nodes across all trees where that feature is used for splitting
+Calculate how much that split reduced impurity (variance in regression)
+Average these reductions across all trees
+Normalize so all importances sum to 1.0
+
+* Extracting Feature Importance in Spark MLlib
+
+* Method 1: From Trained Model
+
+```{python}
+#| echo: true
+#| eval: false
+#|
+from pyspark.ml.regression import RandomForestRegressor
+
+# Train the model
+rf = RandomForestRegressor(featuresCol="features", labelCol="label", numTrees=100)
+model = rf.fit(train_data)
+
+# Extract feature importances
+importances = model.featureImportances
+
+print(importances)
+# Output: SparseVector or DenseVector like (5,[0,1,2,3,4],[0.25,0.35,0.15,0.20,0.05])
+``` 
+
+* Method 2: Convert to Readable Format
+
+```{python}
+#| echo: true
+#| eval: false
+
+# Get feature importances as a list
+importance_scores = model.featureImportances.toArray()
+
+# Assuming you have feature names
+feature_names = ["MIN_YEARS_EXPERIENCE", "MAX_YEARS_EXPERIENCE", 
+                 "DURATION", "SALARY_FROM", "COMPANY_SIZE"]
+
+# Create a list of (feature, importance) tuples
+feature_importance_list = list(zip(feature_names, importance_scores))
+
+# Sort by importance (descending)
+feature_importance_list.sort(key=lambda x: x[1], reverse=True)
+
+# Print
+for feature, importance in feature_importance_list:
+    print(f"{feature}: {importance:.4f}")
+```
+
+* Method 3: Create a Pandas DataFrame for Analysis
+
+```{python}
+#| echo: true
+#| eval: false
+
+import pandas as pd
+
+# Convert to pandas DataFrame
+importance_df = pd.DataFrame({
+    'Feature': feature_names,
+    'Importance': importance_scores
+}).sort_values('Importance', ascending=False)
+
+print(importance_df)
+```
+
+* Visualizing Feature Importance
+```{python}
+#| echo: true
+#| eval: false
+
+import matplotlib.pyplot as plt
+
+# Sort by importance
+importance_df_sorted = importance_df.sort_values('Importance', ascending=True)
+
+# Create horizontal bar chart
+plt.figure(figsize=(10, 6))
+plt.barh(importance_df_sorted['Feature'], importance_df_sorted['Importance'])
+plt.xlabel('Feature Importance')
+plt.title('Random Forest Feature Importance')
+plt.tight_layout()
+plt.show()
+```
