added random forest regression

--- a/assignment04-manyala.ipynb
+++ b/assignment04-manyala.ipynb
@@ -48,14 +48,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                                \r"
+            "/home/ubuntu/assignment-04-BhargaviManyala/.venv/lib/python3.12/site-packages/kaleido/__init__.py:14: UserWarning:\n",
+            "\n",
+            "\n",
+            "\n",
+            "Warning: You have Plotly version 6.0.0, which is not compatible with this version of Kaleido (1.0.0).\n",
+            "\n",
+            "This means that static image generation (e.g. `fig.write_image()`) will not work.\n",
+            "\n",
+            "Please upgrade Plotly to version 6.1.1 or greater, or downgrade Kaleido to version 0.2.1.\n",
+            "\n",
+            "\n",
+            "Setting default log level to \"WARN\".\n",
+            "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+            "25/10/07 14:46:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+            "25/10/07 14:46:57 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
           ]
         }
       ],
@@ -98,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -151,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -188,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -266,38 +280,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 877:>                                                        (0 + 1) / 1]\r"
+            "                                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "+--------+------------------------------------------------------+\n",
-            "|SALARY  |features                                              |\n",
-            "+--------+------------------------------------------------------+\n",
-            "|117500.0|(28,[0,1,2,5,23,26,27],[3.0,3.0,14.0,1.0,1.0,1.0,1.0])|\n",
-            "|100000.0|(28,[0,1,2,3,23,26,27],[3.0,3.0,42.0,1.0,1.0,1.0,1.0])|\n",
-            "|100000.0|(28,[0,1,2,3,23,26,27],[3.0,3.0,20.0,1.0,1.0,1.0,1.0])|\n",
-            "|100000.0|(28,[0,1,2,8,23,26,27],[1.0,1.0,42.0,1.0,1.0,1.0,1.0])|\n",
-            "|162050.0|(28,[0,1,2,4,26,27],[5.0,5.0,33.0,1.0,1.0,1.0])       |\n",
-            "+--------+------------------------------------------------------+\n",
+            "+--------+-------------------------------------------------------------+\n",
+            "|SALARY  |features                                                     |\n",
+            "+--------+-------------------------------------------------------------+\n",
+            "|116500.0|(28,[0,1,2,3,21,23,26,27],[2.0,2.0,6.0,1.0,1.0,1.0,1.0,1.0]) |\n",
+            "|116500.0|(28,[0,1,2,4,21,23,26],[7.0,7.0,18.0,1.0,1.0,1.0,1.0])       |\n",
+            "|116500.0|(28,[0,1,2,4,21,23,26],[1.0,1.0,8.0,1.0,1.0,1.0,1.0])        |\n",
+            "|116500.0|(28,[0,1,2,3,21,23,26,27],[1.0,1.0,32.0,1.0,1.0,1.0,1.0,1.0])|\n",
+            "|131100.0|(28,[0,1,2,3,21,23,26,27],[2.0,2.0,11.0,1.0,1.0,1.0,1.0,1.0])|\n",
+            "+--------+-------------------------------------------------------------+\n",
             "only showing top 5 rows\n",
             "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "                                                                                \r"
           ]
         }
       ],
@@ -324,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -359,7 +366,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 907:>                                                        (0 + 1) / 1]\r"
+            "[Stage 95:>                                                         (0 + 1) / 1]\r"
           ]
         },
         {
@@ -395,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -433,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -490,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -505,7 +512,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 934:>                                                        (0 + 1) / 1]\r"
+            "[Stage 117:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -542,14 +549,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 943:>                                                        (0 + 1) / 1]\r"
+            "                                                                                \r"
           ]
         },
         {
@@ -566,7 +573,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 948:>                                                        (0 + 1) / 1]\r"
+            "[Stage 133:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -602,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -646,7 +653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -903,7 +910,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "execution_count": 98,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -937,7 +944,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -995,7 +1002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -1030,7 +1037,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 987:>                                                        (0 + 1) / 1]\r"
+            "[Stage 168:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -1059,7 +1066,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -1097,7 +1104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1154,7 +1161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1169,7 +1176,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 1007:>                                                       (0 + 1) / 1]\r"
+            "[Stage 191:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -1206,7 +1213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1230,7 +1237,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[Stage 1028:>                                                       (0 + 1) / 1]\r"
+            "[Stage 212:>                                                        (0 + 1) / 1]\r"
           ]
         },
         {
@@ -1266,7 +1273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -1310,7 +1317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -1575,7 +1582,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "execution_count": 106,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1598,6 +1605,75 @@
         "\n",
         "\n",
         "HTML(poly_coef_table.to_html())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Random Forest Regressor"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "25/10/07 14:59:01 WARN DAGScheduler: Broadcasting large task binary with size 2.6 MiB\n",
+            "25/10/07 14:59:14 WARN DAGScheduler: Broadcasting large task binary with size 1645.3 KiB\n",
+            "25/10/07 14:59:16 WARN DAGScheduler: Broadcasting large task binary with size 2.6 MiB\n",
+            "[Stage 340:>                                                        (0 + 1) / 1]\r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Root Mean Squared Error (RMSE): 21266.70\n",
+            "R² (Coefficient of Determination): 0.25\n",
+            "Mean Absolute Error (MAE): 14848.19\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                                \r"
+          ]
+        }
+      ],
+      "source": [
+        "from pyspark.ml.regression import RandomForestRegressor\n",
+        "from pyspark.ml.evaluation import RegressionEvaluator\n",
+        "\n",
+        "rf = RandomForestRegressor(\n",
+        "    featuresCol=\"features\",\n",
+        "    labelCol=\"SALARY\",\n",
+        "    numTrees=300,\n",
+        "    maxDepth=6,\n",
+        "    subsamplingRate=0.8,\n",
+        "    featureSubsetStrategy=\"auto\",\n",
+        "    seed=42\n",
+        ")\n",
+        "\n",
+        "rf_model = rf.fit(regression_train)\n",
+        "rf_pred = rf_model.transform(regression_test)\n",
+        "\n",
+        "evaluator_rmse = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+        "evaluator_r2 = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"r2\")\n",
+        "evaluator_mae = RegressionEvaluator(labelCol=\"SALARY\", predictionCol=\"prediction\", metricName=\"mae\")\n",
+        "\n",
+        "rmse = evaluator_rmse.evaluate(rf_pred)\n",
+        "r2 = evaluator_r2.evaluate(rf_pred)\n",
+        "mae = evaluator_mae.evaluate(rf_pred)\n",
+        "\n",
+        "print(f\"Root Mean Squared Error (RMSE): {rmse:.2f}\")\n",
+        "print(f\"R² (Coefficient of Determination): {r2:.2f}\")\n",
+        "print(f\"Mean Absolute Error (MAE): {mae:.2f}\")"
       ]
     }
   ],
